# graph-rec-movielens

./: .gitignore  README.md  env_tester.py  pyproject.toml
checkpoints/: best_model.pth
scripts/: run_experiments.sh
src/: __init__.py  data_loader.py  model.py  trainer.py  trainer_plus.py  utils.py
