[project]
name = "graph-rec-movielens"
version = "0.1.0"
description = "UC IRVINE EECS 298 COURSE PROJECT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "ruff>=0.15.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
